# Factify.ai

./: .env.dist  .gitignore  README.md  docker-compose.yaml  parse_imports.py  poprawki_na_frontend.md  pyproject.toml
backend/: Dockerfile  endpoint_docs.md
backend/src/: .gitignore  config.py  endpoint_docs.md  keycloak_client.py  main.py  requirements.txt  utils.py
backend/src/image_detection/: .gitignore  README.md  __init__.py  config.py  training.py
backend/src/image_detection/detector/: config.py  inference.py  model_utils.py
backend/src/image_detection/utils/: download_model.py
backend/src/nlp/: .gitignore  __init__.py  damian.md  helpNLP.md
backend/src/nlp/detector/: analysis.py  artifacts.py  calibration.py  chunking.py  cli.py  config.py  data.py  evaluation.py  (+4 more)
backend/src/routes/: __init__.py  admin.py  ai_text.py  analysis.py  example.py  find_sources.py  history.py  image.py  manipulation.py  nlp.py  social.py  user.py
common/python/: db.py  requirements.txt  text_extractor.py
cron/: Dockerfile
cron/src/: .gitignore  config.py  context.py  llm.py  main.py  sync_reports.py  types_.py
cron/src/model/: infer.py  roberta_model.py  train.py  utils.py
frontend/: Dockerfile
frontend/factify-app/app/: globals.css  layout.tsx  page.tsx
frontend/src/: package-lock.json  package.json
frontend/src/app/: globals.css  keycloak.ts  layout.tsx  page.tsx
frontend/src/auth/: KeycloakProviderWrapper.tsx  keycloak.ts
frontend/src/factify-app/: package.json
frontend/src/lib/: api.ts
keycloak/: Dockerfile  cert.pem  factify.json  key.pem
(+126 files in other folders)
